--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 /Aws
 /ansible
-aws-cli.csv
-/terraform/terraform.tfstate
-/terraform/terraform.tfstate.backup
+/terraform
 
 
-**terraform/.terraform/**
+aws-cli.csv 
